<resources>
    <string name="app_name">Hostess</string>

    <!-- Strings related to login -->
    <string name="prompt_user_name">User name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_user">This user names is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="beerhouse_hostess_system" translatable="false">BeerHouse Hostess System</string>
    <string name="nav_history" translatable="false">History</string>
    <string name="last_date" translatable="false">30</string>
    <string name="current_date">Current Date</string>
    <string name="add_event">Add Event</string>
    <string name="mon" translatable="false">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri" translatable="false">FRI</string>
    <string name="sat">SAT</string>
    <string name="prompt_client">Client name</string>
    <string name="prompt_phone">Phone</string>
    <string name="begin_time">From</string>
    <string name="end_time">To</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="map">Map</string>
    <string name="comment">Comment</string>
    <string name="from_time">From</string>
    <string name="sun">SUN</string>
    <string name="prompt_guests">Guests number</string>
    <string name="save">Save</string>
    <string name="success">Success</string>
    <string name="color">Color</string>
    <string name="update">Update</string>
</resources>
