<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_custom_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlclient_name"
            style="@style/LoginTilEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/prompt_client"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tlPhone"
            style="@style/LoginTilEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tlclient_name">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/prompt_phone"
                android:inputType="phone"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lblFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tlPhone"
            android:shadowColor="@color/colorSubTitle"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/begin_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lblFromDate"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/lblFromDate"
            android:clickable="true"
            android:text="@string/begin_time"
            android:textAlignment="viewEnd"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/lblToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lblFromDate"
            android:shadowColor="@color/colorSubTitle"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/end_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lblToDate"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tvFromDate"
            android:layout_toEndOf="@id/lblToDate"
            android:clickable="true"
            android:text="@string/end_time"
            android:textAlignment="viewEnd"
            android:textColor="@color/accent" />

        <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="100px"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="5dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5dp"
            android:text=" Ok " />
    </RelativeLayout>
</LinearLayout>